--- a/wsl/terminal_settings.jsonc
+++ b/wsl/terminal_settings.jsonc
@@ -119,7 +119,7 @@
     {
       "command": {
         "action": "copy",
-        "singleLine": true
+        "singleLine": false
       },
       "keys": "ctrl+c"
     },
