--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,9 @@
 [user]
 	name = Omkar Moghe
 	email = omoghe@umich.edu
-
 [alias]
 	st = status
-	ci = commit
-	co = checkout
-	rb = rebase
-	lg = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%an%Creset' --graph --color --abbrev-commit
+	lg = log --pretty=format:'%Cred%h%Creset - %C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)%an%Creset' --graph --color --abbrev-commit
 [pull]
 	rebase = true
 [core]
@@ -17,3 +13,5 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[log]
+	date = human
