--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -42,7 +42,8 @@ window_padding_width 5 5
 
 editor code
 
-macos_thicken_font 0.25
-
 tab_bar_style separator
 tab_separator " || "
+
+macos_thicken_font 0.25
+macos_option_as_alt left
