add default branch name

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,3 +19,5 @@
 	pretty = changelog
 [pretty]
 	changelog = format:"%Cred%h%Creset - %C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)%an%Creset"
+[init]
+	defaultBranch = main
