--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,50 +1,25 @@
-font_family "JetBrains Mono"
+font_family JetBrains Mono
 bold_font auto
 italic_font auto
 bold_italic_font auto
 
 font_size 14.0
 
-# Night Owl
-background #011627
-foreground #d6deeb
-selection_background #1b90dd
-# black
-color0 #011627
-color8 #575656
-# red
-color1 #ef5350
-color9 #ef5350
-# green
-color2 #22da6e
-color10 #22da6e
-# yellow
-color3 #c5e478
-color11 #c5e478
-# blue
-color4 #82aaff
-color12 #82aaff
-# magenta
-color5 #c792ea
-color13 #c792ea
-# cyan
-color6 #21c7a8
-color14 #21c7a8
-# white
-color7 #ffffff
-color15 #ffffff
-
 cursor_shape block
-cursor_beam_thickness 1.0
+cursor_shape_unfocused hollow
 
 scrollback_lines 10000
 
 window_padding_width 5 5
 
-editor code
+editor /usr/local/bin/code
 
-tab_bar_style separator
-tab_separator " | "
+tab_bar_style powerline
+tab_powerline_style slanted
 
-macos_thicken_font 0.25
 macos_option_as_alt left
+
+shell_integration no-cursor
+
+# include ./night_owl.conf
+include ./light_owl.conf
