--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 	rebase = true
 [core]
 	autocrlf = input
-	pager = batcat
+	pager = bat
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
