--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -22,5 +22,5 @@ macos_option_as_alt left
 
 shell_integration no-cursor
 
-# include ./night_owl.conf
-include ./light_owl.conf
+include ./night_owl.conf
+# include ./light_owl.conf
